--- a/TP 1/index.html
+++ b/TP 1/index.html
@@ -42,7 +42,7 @@
 
         <!-- Colocar links reales + íconos -->
         <div>
-            <h4>CONTACTANOS</h4>
+            <h4>CONTACTATE</h4>
             <a href="https://www.instagram.com/nmartina.ph" target="_blank">WhatsApp</a>
             <a href="https://www.facebook.com/phmartina" target="_blank">E-mail</a>
             <a href="https://phmartina.pixieset.com/" target="_blank">Skype</a>
