--- a/TP 1/index.html
+++ b/TP 1/index.html
@@ -14,33 +14,36 @@
         <h1>MARTINA KUCHARCZUK</h1>
         <h2>Soluciones Creativas</h2>
     </header>
+    <main>
+        <!-- Formar cuadrado con las fotos, cada una va a redirigir a otro sitio -->
+        <section id="menu">
+            <img src="./img/Mellizas80.JPG" alt="Cumpleaños 80" title="Cumpleaños 80" class="portfolio">
+            <img src="./img/Calesita.JPG" alt="Carrousel" title="Carrousel" class="portfolio">
+            <img src="./img/EscalerasIglesia.JPG" alt="Bautismo" title="Bautismo" class="portfolio">
+            <img src="./img/Autoretrato.JPG" alt="SelfPortrait" title="SelfPortrait" class="portfolio">
 
-    <!-- Formar cuadrado con las fotos, cada una va a redirigir a otro sitio -->
-    <section id="menu">
-        <img src="./img/Mellizas80.JPG" alt="Cumpleaños 80" title="Cumpleaños 80" class="portfolio">
-        <img src="./img/Calesita.JPG" alt="Carrousel" title="Carrousel" class="portfolio">
-        <img src="./img/EscalerasIglesia.JPG" alt="Bautismo" title="Bautismo" class="portfolio">
-        <img src="./img/Autoretrato.JPG" alt="SelfPortrait" title="SelfPortrait" class="portfolio">
-    </section>
+            <!-- Formulario para que se contacten usuarios -->
+            <div>
+                <form name="Consulta">
 
+                    <h4>Dejanos tu consulta</h4>
+
+                    <input type="text" name="Nombre y Apellido" placeholder="Nombre y Apellido">
+                    <input type="email" name="E-mail" placeholder="ejemplo@mail.com">
+                    <input type="text" name="Celular" placeholder="1122334455">
+                    <input type="text" name="Mensaje" placeholder="Escribí acá tu consulta...">
+
+                    <button type="submit" tabindex="5">Enviar</button>
+
+                </form>
+
+            </div>
+
+        </section>
+
+    </main>
     <footer>
-        <!-- Formulario para que se contacten usuarios -->
-        <div>
-            <form name="Consulta">
-
-                <h4>Dejanos tu consulta</h4>
-
-                <input type="text" name="Nombre y Apellido" placeholder="Nombre y Apellido">
-                <input type="email" name="E-mail" placeholder="ejemplo@mail.com">
-                <input type="text" name="Celular" placeholder="1122334455">
-                <input type="text" name="Mensaje" placeholder="Escribí acá tu consulta...">
-
-                <button type="submit" tabindex="5">Enviar</button>
-
-            </form>
-        </div>
-
-        <!-- Colocar links reales + íconos -->
+        <!-- -- Colocar links reales + íconos --> -->
         <div>
             <h4>CONTACTATE</h4>
             <a href="https://www.instagram.com/nmartina.ph" target="_blank">WhatsApp</a>
