Cambie: header y sections

--- a/TP 1/index.html
+++ b/TP 1/index.html
@@ -8,20 +8,111 @@
 
 <body>
 
-    <!-- Imagen Hamacas va de fondo, sobre eso poner h1 y h2 y LogoMK -->
+    <!--nav va acá o en head?? Logo Pequeño a la izquierda y lo demás alineado horizontal -->
     <header>
-        <img src="./img/Hamacas.JPG" alt="Hamacas" title="Hamacas" height="371px" width="660">
-        <h1>MARTINA KUCHARCZUK</h1>
-        <h2>Soluciones Creativas</h2>
-    </header>
-    <main>
-        <!-- Formar cuadrado con las fotos, cada una va a redirigir a otro sitio -->
-        <section id="menu">
-            <img src="./img/Mellizas80.JPG" alt="Cumpleaños 80" title="Cumpleaños 80" class="portfolio">
-            <img src="./img/Calesita.JPG" alt="Carrousel" title="Carrousel" class="portfolio">
-            <img src="./img/EscalerasIglesia.JPG" alt="Bautismo" title="Bautismo" class="portfolio">
-            <img src="./img/Autoretrato.JPG" alt="SelfPortrait" title="SelfPortrait" class="portfolio">
+        <div>
+            <img src="./img/IsologoMK.png" alt="IsologoMK" title="isologomk" height="10px" width="10px">
+<!-- Armar arcihivo para logo acá chiquito y  -->
+            <nav>
+                <p>HOME</p>
+                <p>ABOUT</p>
+                <p>PORTFOLIO</p>
+                <p>SHOP</p>
+                <p>CONTACTO</p>
+            </nav>
 
+        </div>
+        <!-- Agregar en CSS foto Hamacas de Fondo. Centrar h1 y h2. p: abajo-->
+        <div>
+            <h1>MARTINA KUCHARCZUK</h1>
+            <h2>Soluciones Creativas</h2>
+
+            <p>ABOUT</p>
+            <p>PORTFOLIO</p>
+            <p>SHOP</p>
+            <p>CONTACTO</p>
+        </div>
+
+    </header>
+
+    <main>
+        <section>
+            <title>ABOUT</title>
+            
+                <div>
+                    <img src="./img/Autoretrato.JPG" alt="Autoretrato" height="20px" width="20px">
+                    <p>Autoretrato - 2011</p>
+                </div>
+
+                <div>
+                     <title>BIO</title>
+                    <p>
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo expedita ad porro culpa.
+                   Voluptatem accusamus totam iure! Error mollitia vitae, corporis, est animi tenetur in distinctio ea
+                   voluptas consectetur accusantium.
+                    </p>
+                </div>
+                
+                <div>
+                    <img src="./img/IsologoMK.png" alt="isologomk" title="isologomk">
+                </div>
+        </section>
+
+        <section>
+            <title>PORTFOLIO</title>
+
+                <div>
+                    <p>Retratos</p>
+                    <img src="./img/" alt="">
+                </div>
+
+                <div>
+                    <p>Eventos Sociales</p>
+                    <img src="./img/" alt="">
+                </div>
+
+                <div>
+                    <p>Documental</p>
+                    <img src="./img" alt="">
+                </div>
+
+                <div>
+                    <p>Proyectos Personales</p>
+                    <img src="./img/" alt="">
+                </div>
+        </section>
+
+        <section>
+            <title>SHOP</title>
+
+            <div>
+                <p>Trabajos Personalizados</p>
+                <img src="" alt="">
+            </div>
+
+            <div>
+                <p>Impresiones de todo tipo</p>
+                <img src="" alt="">
+            </div>
+
+            <div>
+                <p>Presupuestos sin cargo</p>
+                <img src="" alt="">
+            </div>
+
+            <div>
+                Armar tabla con listado
+                Columna 1: Cuadernos Láminas Cuadros
+                Columna 2: Fotolibros Postales Souvenirs
+            </div>
+
+            <div>
+                <title>Newsletter!</title>
+                <p>Registrate para recibir todas las novedades del e-shop y servicios</p>
+                <button> SUBSCRIBE </button>
+            </div>
+
+        </section>
             <!-- Formulario para que se contacten usuarios -->
             <div>
                 <form name="Consulta">
@@ -43,7 +134,7 @@
 
     </main>
     <footer>
-        <!-- -- Colocar links reales + íconos --> -->
+        <!-- -- Colocar links reales + íconos -->
         <div>
             <h4>CONTACTATE</h4>
             <a href="https://www.instagram.com/nmartina.ph" target="_blank">WhatsApp</a>
