Agregué archivos de fuente e img

--- a/TP 1/index.html
+++ b/TP 1/index.html
@@ -7,101 +7,97 @@
     <title>MK</title>
 
     <link rel="stylesheet" href=index.css>
+    <link rel="C:\Users\Martina\Desktop\Coding Bootcamp\TPs\TP 1\fonts">
+
 </head>
 
 <body>
 
     <header class="header">
 
-        <div class="navigation">
-
+        <!-- <div class="navigation">
             <nav>
 
-                <a href="https://HOME" target="_blank">HOME</a>
-                <a href="https://ABOUT" target="_blank">ABOUT</a>
-                <a href="https://PORTFOLIO" target="_blank">PORTFOLIO</a>
-                <a href="https://E-SHOP" target="_blank">SHOP</a>
-                <a href="https://CONTACTO" target="_blank">CONTACTO</a>
+                <ul>
+                    <li> <a href="https://HOME" target="_blank">HOME</a> </li>
+                    <li> <a href="https://ABOUT" target="_blank">ABOUT</a> </li>
+                    <li> <a href="https://PORTFOLIO" target="_blank">PORTFOLIO</a> </li>
+                    <li> <a href="https://E-SHOP" target="_blank">SHOP</a> </li>
+                    <li> <a href="https://CONTACTO" target="_blank">CONTACTO</a> </li>
+                </ul>
 
             </nav>
+        </div> -->
 
-        </div>
-
-        <div class="mk">
-
-            <h1>MARTINA KUCHARCZUK</h1>
-            <h2>Soluciones Creativas</h2>
-
-        </div>
-
-
+        <h1>MARTINA KUCHARCZUK</h1>
+        <h2>Soluciones Creativas</h2>
 
     </header>
 
     <main>
-        <section class="about">
-            <h4>ABOUT</h4>
-
-            <div class="autoretrato">
-                <img src="./img/Autoretrato.JPG" alt="Autoretrato" height="50px" width="50px">
-                <p>Autoretrato - 2011</p>
-            </div>
-
-            <div class="bio">
-                <title>BIO</title>
-                <p>
-                    bla bla bla
-                </p>
-            </div>
-
-           
-        </section>
 
         <section class="portfolio">
 
             <h4>PORTFOLIO</h4>
 
-            <div class="port-retratos">
+            <div>
+                <img class="port-retratos" src="img/Llanca.jpg" alt="Llanca" title="Llanca">
                 <p>Retratos</p>
-                <img src="./img/" alt="">
             </div>
 
-            <div class="port-sociales">
+            <div>
+                <img class="port-sociales" src="./img/SocialesBombonera.jpg" alt="Boda en la Bombonera"
+                    title="Boda en la Bombonera">
                 <p>Eventos Sociales</p>
-                <img src="./img/" alt="">
             </div>
 
-            <div class="port-documental">
+            <div>
+                <img class="port-bandas" src="img/CuadradaLordencih.jpg" alt="Lordencih" title="Lordencih">
+                <p>Shows</p>
+            </div>
+
+            <div>
+                <img class="port-documental" src="./img/Documental8m.jpg" alt="La put* que te paró"
+                    title="La put* que te paró">
                 <p>Documental</p>
-                <img src="./img" alt="">
             </div>
 
-            <div class="personales">
-                <p>Proyectos Personales</p>
-                <img src="./img/" alt="">
+        </section>
+
+        <section class="about">
+            <h4>BIO</h4>
+
+            <div>
+                <img class="img-autoretrato" src="./img/CuadradaAutoBN.jpg" alt="Autoretrato">
+                <p>Autoretrato - 2011</p>
             </div>
+
+            <div>
+                <p>Hola, soy Martina. Saco fotos, pero las saco comoiokiero.</p>
+            </div>
+
         </section>
 
         <section class="shop">
 
-            <h5>SHOP</h5>
+            <h4>SHOP</h4>
 
-            <div class="trabajos">
+            <div>
+                <img class="img-trabajos" src="./img/FondoFlor.jpg" alt="flores">
                 <p>Trabajos Personalizados</p>
-                <img src="" alt="">
             </div>
 
-            <div class="impresiones">
+            <div>
+                <img class="img-impresiones" src="img/FondoFlor.jpg" alt="flores">
                 <p>Impresiones de todo tipo</p>
-                <img src="" alt="">
             </div>
 
-            <div class="presupuestos">
+            <div>
+                <img class="img-presupuestos" src="img/FondoFlor.jpg" alt="flores">
                 <p>Presupuestos sin cargo</p>
-                <img src="" alt="">
             </div>
 
-            <div class="productos1">
+            <!-- <div class="productos1">
                 <ul>
                     <li>Libretas</li>
                     <li>Cuadernos</li>
@@ -123,41 +119,40 @@
                     <li>Postales</li>
                     <li>Ampliaciones</li>
                 </ul>
-            </div>
+            </div> -->
 
             <div class="newsletter">
-                <h5>Newsletter</h5>
+                <h4>Newsletter</h4>
 
-                <p>Registrate para recibir todas las novedades del e-shop y servicios</p>
+                <p>Registrate para recibir todas las novedades y ofertas del e-shop y nuestros servicios</p>
 
-                <div>
-                    <button>
-                        <a href="https://www.instagram.com/nmartina.ph" target="_blank">SUBSCRIBE</a>
-                    </button>
+                <button>
+                    <a href="https://www.e-shopimaginario.com" target="_blank">¡REGISTRATE!</a>
+                </button>
 
-                </div>
+
             </div>
 
             <section class="contacto">
-                <div class="ubicacion">
-                    <title>Ubicación</title>
-                    <p>Ramos Mejía, Buenos Aires, Argentina</p>
-                    <img src="googlemaps" alt="location" title="location">
-                </div>
+                <h4>Contactanos</h4>
 
-
-                <div class="digital contact">
-                    <title>Social Media</title>
-
-                    <p>nmartina.ph@gmail.com</p>
-                    <p>WhatsApp</p>
-                    <p>Skype</p>
+                <div class="contacto2">
+                    <a href="https://acavawapp.com" target="_blank" >WhatsApp</a>
+                    <a href="https://sale-ese-mail.com" target="_blank" >Gmail</a>
+                    <a href="https://join.skype.com/invite/xGBfgkWvmqwF" target="_blank" >Skype</a>
                 </div>
 
                 <div class="formulario">
                     <title>Dejá de tu mensaje</title>
+                    
 
                 </div>
+
+                <div class="ubicacion">
+                    <p> ¿Dónde estamos?
+                    <p>Ramos Mejía, Buenos Aires, Argentina</p>
+                </div>
+
 
             </section>
 
@@ -167,7 +162,7 @@
 
 
     <footer>
-        <!-- Alinear vertical. Agregar íconos rrss -->
+        <!-- Alinear horizontal. Agregar íconos rrss -->
         <div class="social-media">
             <a href="https://www.instagram.com/nmartina.ph" target="_blank">INSTAGRAM</a>
             <a href="https://www.facebook.com/phmartina" target="_blank">FACEBOOK</a>
