--- a/TP 1/index.html
+++ b/TP 1/index.html
@@ -9,25 +9,23 @@
     <link rel="stylesheet" href=index.css>
     <link rel="C:\Users\Martina\Desktop\Coding Bootcamp\TPs\TP 1\fonts">
 
+    <nav class="navigation">
+
+        <ul>
+            <a href="https://HOME" target="_blank">HOME</a>
+            <a href="https://ABOUT" target="_blank">ABOUT</a>
+            <a href="https://PORTFOLIO" target="_blank">PORTFOLIO</a>
+            <a href="https://E-SHOP" target="_blank">SHOP</a>
+            <a href="https://CONTACTO" target="_blank">CONTACTO</a>
+        </ul>
+
+    </nav>
+
 </head>
 
 <body>
 
-    <header class="header">
-
-        <!-- <div class="navigation">
-            <nav>
-
-                <ul>
-                    <li> <a href="https://HOME" target="_blank">HOME</a> </li>
-                    <li> <a href="https://ABOUT" target="_blank">ABOUT</a> </li>
-                    <li> <a href="https://PORTFOLIO" target="_blank">PORTFOLIO</a> </li>
-                    <li> <a href="https://E-SHOP" target="_blank">SHOP</a> </li>
-                    <li> <a href="https://CONTACTO" target="_blank">CONTACTO</a> </li>
-                </ul>
-
-            </nav>
-        </div> -->
+    <header>
 
         <h1>MARTINA KUCHARCZUK</h1>
         <h2>Soluciones Creativas</h2>
@@ -38,7 +36,7 @@
 
         <section class="portfolio">
 
-            <h4>PORTFOLIO</h4>
+            <!-- <h4>PORTFOLIO</h4> -->
 
             <div>
                 <img class="port-retratos" src="img/Llanca.jpg" alt="Llanca" title="Llanca">
@@ -65,22 +63,29 @@
         </section>
 
         <section class="about">
-            <h4>BIO</h4>
+            <!-- <h4>BIO</h4> -->
+            <article>
+                <div>
+                    <img class="img-autoretrato" src="./img/CuadradaAutoBN.jpg" alt="Autoretrato">
+                    <p>Autoretrato - 2011</p>
+                </div>
 
-            <div>
-                <img class="img-autoretrato" src="./img/CuadradaAutoBN.jpg" alt="Autoretrato">
-                <p>Autoretrato - 2011</p>
-            </div>
+                <div>
+                    <p>Hola, soy Martina. Saco fotos, pero las saco comoiokiero.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque debitis quidem vitae tenetur
+                        dolorem
+                        accusamus tempore ex commodi sequi ratione voluptate, culpa recusandae suscipit rerum similique,
+                        velit dolore cupiditate fugiat.
+                    </p>
+                </div>
+            </article>
 
-            <div>
-                <p>Hola, soy Martina. Saco fotos, pero las saco comoiokiero.</p>
-            </div>
 
         </section>
 
         <section class="shop">
 
-            <h4>SHOP</h4>
+            <!-- <h4>SHOP</h4> -->
 
             <div>
                 <img class="img-trabajos" src="./img/FondoFlor.jpg" alt="flores">
@@ -120,8 +125,11 @@
                     <li>Ampliaciones</li>
                 </ul>
             </div> -->
+        </section>
 
-            <div class="newsletter">
+        <section class="newsletter">
+
+            <div>
                 <h4>Newsletter</h4>
 
                 <p>Registrate para recibir todas las novedades y ofertas del e-shop y nuestros servicios</p>
@@ -129,32 +137,26 @@
                 <button>
                     <a href="https://www.e-shopimaginario.com" target="_blank">¡REGISTRATE!</a>
                 </button>
+            </div>
+
+        </section>
+
+
+        <section class="contacto">
+            <h4>Contactanos</h4>
+
+            <div>
+                <a href="https://acavawapp.com" target="_blank">WhatsApp</a>
+                <a href="https://sale-ese-mail.com" target="_blank">Gmail</a>
+                <a href="https://join.skype.com/invite/xGBfgkWvmqwF" target="_blank">Skype</a>
+            </div>
+
+            <div class="formulario">
 
 
             </div>
 
-            <section class="contacto">
-                <h4>Contactanos</h4>
-
-                <div class="contacto2">
-                    <a href="https://acavawapp.com" target="_blank" >WhatsApp</a>
-                    <a href="https://sale-ese-mail.com" target="_blank" >Gmail</a>
-                    <a href="https://join.skype.com/invite/xGBfgkWvmqwF" target="_blank" >Skype</a>
-                </div>
-
-                <div class="formulario">
-                    <title>Dejá de tu mensaje</title>
-                    
-
-                </div>
-
-                <div class="ubicacion">
-                    <p> ¿Dónde estamos?
-                    <p>Ramos Mejía, Buenos Aires, Argentina</p>
-                </div>
-
-
-            </section>
+        </section>
 
 
 
@@ -162,18 +164,22 @@
 
 
     <footer>
-        <!-- Alinear horizontal. Agregar íconos rrss -->
-        <div class="social-media">
-            <a href="https://www.instagram.com/nmartina.ph" target="_blank">INSTAGRAM</a>
-            <a href="https://www.facebook.com/phmartina" target="_blank">FACEBOOK</a>
-            <a href="https://phmartina.pixieset.com/" target="_blank">PIXIESET</a>
-            <a href="https://github.com/martinakucharczuk" target="_blank">GITHUB</a>
-        </div>
+
+        <nav class="navigation">
+
+            <ul>
+                <a href="https://HOME" target="_blank">HOME</a>
+                <a href="https://ABOUT" target="_blank">ABOUT</a>
+                <a href="https://PORTFOLIO" target="_blank">PORTFOLIO</a>
+                <a href="https://E-SHOP" target="_blank">SHOP</a>
+                <a href="https://CONTACTO" target="_blank">CONTACTO</a>
+            </ul>
+
+        </nav>
 
         <div class="derechos">
             <p>Designed by Martina Kucharczuk - Mayo, 2020</p>
         </div>
-
     </footer>
 </body>
 
