--- a/TP 1/index.html
+++ b/TP 1/index.html
@@ -9,23 +9,28 @@
     <link rel="stylesheet" href=index.css>
     <link rel="C:\Users\Martina\Desktop\Coding Bootcamp\TPs\TP 1\fonts">
 
-    <nav class="navigation">
 
-        <ul>
-            <a href="https://HOME" target="_blank">HOME</a>
-            <a href="https://ABOUT" target="_blank">ABOUT</a>
-            <a href="https://PORTFOLIO" target="_blank">PORTFOLIO</a>
-            <a href="https://E-SHOP" target="_blank">SHOP</a>
-            <a href="https://CONTACTO" target="_blank">CONTACTO</a>
-        </ul>
-
-    </nav>
 
 </head>
 
 <body>
 
     <header>
+
+        <div class="navigation">
+            <nav>
+
+                <ul>
+                    <img src="img/IsologoMK.png" alt="Logo">
+                    <a href="https://HOME" target="_blank">HOME</a>
+                    <a href="https://ABOUT" target="_blank">ABOUT</a>
+                    <a href="https://PORTFOLIO" target="_blank">PORTFOLIO</a>
+                    <a href="https://E-SHOP" target="_blank">SHOP</a>
+                    <a href="https://CONTACTO" target="_blank">CONTACTO</a>
+                </ul>
+        
+            </nav>
+        </div>
 
         <h1>MARTINA KUCHARCZUK</h1>
         <h2>Soluciones Creativas</h2>
